[project]
name = "torchview"
version = "0.2.7"
description = "Visualization of Pytorch Models"
authors = [{ name = "Mert Kurttutan", email = "kurttutan.mert@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pytorch", "visualization", "keras", "torch", "deep learning", "machine learning", "ml", "neural network"]
maintainers = [
    { name = "Mert Kurttutan", email = "kurttutan.mert@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "graphviz",
]

[project.urls]
homepage = "https://github.com/mert-kurttutan/torchview"
repository = "https://github.com/mert-kurttutan/torchview"

[build-system]
requires = ["hatchling>=1.22.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torchview"]

[dependency-groups]
dev = [
    "black",
    "codecov",
    "ruff==0.0.246",
    "isort",
    "mypy",
    "pycln",
    "pylint",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "packaging",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox",
    "mkdocs-static-i18n",
    "mkdocs-redirects",
    "mdformat",
    "mdformat-mkdocs",
    "mkdocs-gen-files",
    "mkdocstrings",
    "mkdocstrings-python",
    "prek",
]
torch = [
    "torch",
    "torchvision",
    "torchtext",
]

[tool.setuptools.package-data]
torchview = ["py.typed"]

[tool.mypy]
strict = true
implicit_reexport = true
show_error_codes = true
enable_error_code = 'ignore-without-code'
allow_untyped_calls = true


[[tool.mypy.overrides]]
module = [
    'graphviz',
    'torchtext',
    'torchvision',
    'torchvision.models',
    'tests.fixtures.models',
    'tests.fixtures.u_net',
    'tests.fixtures.dense_net',
    'tests.fixtures.custom_attention',
    'torchtext.functional',
    'transformers',
    'mkdocs_gen_files',
    'pytest',
]
ignore_missing_imports = true


[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "torch"
enable = [
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
]
disable = [
    "super-with-arguments",  # explicit is better
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "invalid-name",
    "line-too-long",  # Covered by flake8
    "no-member",
    "fixme",
    "duplicate-code",
    "no-else-return",  # more explicit is better
]

[tool.ruff]
src = ["src"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # should work python < 3.10
    "B010",  # no problem with using setattr ???
]

[tool.ruff.per-file-ignores]
"tests/fixtures/ldc.py" = ["E402",]
